[package]
name = "mikrozen"
version = "0.0.1"
edition = "2021"
description = "A minimal, ergonomic router and JSON response macro for #![no_std] WASI Rust plugins"
authors = ["hlop3z <23062270+hlop3z@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/hlop3z/mikrozen"
documentation = "https://docs.rs/mikrozen"
readme = "README.md"
keywords = ["wasi", "router", "json", "no-std", "plugin"]
categories = ["wasm", "no-std", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }

# WASM-compatible alternatives
dlmalloc = { version = "0.2.4", features = ["global"] }
console_error_panic_hook = "0.1.7"

# Core utilities
once_cell = { version = "1.18", default-features = false }

[features]
default = ["std"]
std = []
decimal = ["rust_decimal"]
test-utils = []

[dependencies.rust_decimal]
version = "1.34"
optional = true

# WASM build targets and optimization settings for all workspace members
[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel codegen for smaller binaries
panic = "abort"   # Smaller binary by removing unwinding
strip = true      # Strip debugging symbols
